--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,10 @@
     --wrong: red;
     --button: rgb(0, 89, 255);
     --accent: rgb(6, 34, 192);
+    --white: whitesmoke;
 }
 
+/* style for body */
 body {
     background-color: var(--dark);
     padding: 0;
@@ -23,9 +25,11 @@ body {
     align-items: center;
 }
 
+/* style settings for top bar and timer */
 .top {
+    display: flex;
     margin-top: 2%;
-    background-color: white;
+    background-color: var(--white);
     display: flex;
     width: 990px;
     height: 50px;
@@ -37,9 +41,9 @@ body {
 }
 
 
-
+/* sizing and positioning for many container */
 .container {
-    background-color: whitesmoke;
+    background-color: var(--white);
     border-radius: 5px;
     border: 2px solid var(--accent);
     width: 1000px;
@@ -48,6 +52,7 @@ body {
     box-shadow: 0 0 10px 2px var(--accent);
 }
 
+/* sizing and alignment for text in container */
 .container h1 {
     margin-top: 100px;
     text-align: center;
@@ -62,19 +67,20 @@ body {
 
 
 
-
+/* sizing and positioning for answer container */
 .answer-container {
     display: flex;
     flex-direction: column;
-    height: 500px;
+    height: 400px;
     width: 45%;
     margin: 5% 12%;    
 }
 
-
+/* styling and positioning for button and hover botton */
 .btn {
-    color: white;
-    width: 80%;
+    text-align: center;
+    color: var(--white);
+    width: 300px;
     height: 12%;
     font-size: 15px;
     margin-bottom: 12px;
@@ -84,16 +90,8 @@ body {
     border-radius: 5px;   
 }
 
-.controls {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .start-btn {
-    color: white;
+    color: var(--white);
     width: 20%;
     height: 8%;
     margin-bottom: 500px;
@@ -105,8 +103,55 @@ body {
 .btn:hover {
     border: 2px solid var(--dark);
     box-shadow: 0 0 10px 2px var(--dark);
+
 }
 
+
+/* colors and position for answer choice alerts */
+.prompts {
+    display: flex;
+    justify-content: center;
+}
+
+.rightanswer {
+   color: var(--right);
+   border-bottom: 2px solid var(--button);
+}
+
+.wronganswer {
+   color: var(--wrong);
+   border-bottom: 2px solid var(--button);
+}
+
+
+/* styling and positioning for final page buttons and text input*/
+.controls {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+h3 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 35px;
+}
+
+input {
+    border: 5px solid var(--dark);
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
+
+input:hover {
+    border: 5px solid var(--button);
+    box-shadow: 0 0 10px 2px var(--dark);
+}
+
+/* class for hiding elements in JS */
 .hide {
     display: none;
 }
