--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,15 +31,17 @@ body {
     margin-top: 2%;
     background-color: var(--white);
     display: flex;
-    width: 990px;
-    height: 50px;
+    width: 300px;
+    height: 100px;
 }
 
-.scores {
-    margin-left: 3%;
-    margin-right: 80%;
+.timer {
+    margin-left: 10px;
 }
 
+.previous {
+    margin-left: 50px;
+}
 
 /* sizing and positioning for many container */
 .container {
